# fast_api

./: README.md  pyproject.toml
basics_of_pydantic/: README.md  main.py
fast_api/: README.md  books.db  books.py  database.py  models.py
fastapi_pytest/: pytest_main.py  test_main.py
jinja2/: main.py
jinja2/templates/: home.html
mongo_db/: README.md
mongo_db/config/: database.py
mongo_db/routes/: route.py
mongo_db/schemas/: schema.py
mysql/: README.md  database.py  main.py  models.py
postgresql/: README.MD  database.py  main.py  models.py
redis/: README.md  dump.rdb  main.py
